--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Bookstore Finder</h1>
+    <h1>Bookstore Locator</h1>
   </header>
   <main>
     <section class="search-section">
